# SudokuMaster

./: .gitignore  README.md
SudokuMaster/: CMakeLists.txt  DatabaseSingleton.h  LogServer.cpp  LogServer.h  LogServerSingleton.cpp  LogServerSingleton.h  login.cpp  login.h  login.ui  main.cpp  mainWindow.cpp  vcpkg.json
SudokuMaster/client/: CMakeLists.txt
SudokuMaster/client/src/: DatabaseSingleton.cpp  LogServer.cpp  LogServer.h  globalLogger.cpp  globalLogger.h  login.cpp  login.h  login.ui  loginWnd.cpp  loginWnd.h  loginWnd.ui  main.cpp  sslSocket.cpp  sslSocket.h  sslSocketThread.cpp  sslSocketThread.h  tcpService.cpp  tcpService.h  toolFunction.cpp  toolFunction.h
SudokuMaster/publicFile/: sslSocketMessage.cpp  sslSocketMessage.h
SudokuMaster/server/: CMakeLists.txt
SudokuMaster/server/src/: Crypto.cpp  Crypto.h  LogServer.cpp  LogServer.h  connectedMap.cpp  connectedMap.h  databaseOperation.cpp  databaseOperation.h  main.cpp  serverLog.cpp  serverLog.h  sslServer.cpp  sslServer.h  sslSocketThread.cpp  sslSocketThread.h  tcpServer.cpp  tcpServer.h
